<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="80dp"
        app:cardCornerRadius="20dp"
        android:layout_centerVertical="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:background="@drawable/popup_bg_fnsh"
            >

            <ImageView
                android:id="@+id/popup_img"
                android:layout_width="800px"
                android:layout_height="600px"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/scan_here" />

            <LinearLayout
                android:layout_width="780px"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"

                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/popup_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="0dp"
                        android:text="@string/have_not_placed_before"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="60px"
                        android:textStyle="bold" />

                </RelativeLayout>


                <TextView
                    android:id="@+id/popup_subtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/have_not_placed_instruction"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

            </LinearLayout>

            <Button
                android:id="@+id/popup_btn"
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:layout_below="@+id/info"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_start_shape"
                android:fontFamily="sans-serif"
                android:text="@string/okBtn"
                android:textColor="@color/white"
                android:textSize="80px" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>