<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackActivity">

    <Button
        android:id="@+id/trackUploadButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/lightblue"
        android:text="@string/trackUploadBtn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingTop="15dp">

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            app:srcCompat="@drawable/backarrow" />

        <TextView
            android:id="@+id/backText"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_weight="1"
            android:text="back"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <RelativeLayout
            android:id="@+id/compass_layout"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/compass_arrow" />

            <ImageView
                android:id="@+id/compass"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/compass" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/compass_layout"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="59dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="82dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/directionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/directionLabel"
                    android:textSize="65px" />

                <TextView
                    android:id="@+id/directionValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textSize="65px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/distanceLabel"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/distanceLabel"
                    android:textSize="65px" />

                <TextView
                    android:id="@+id/distanceValue"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textSize="65px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/temperatureLabel"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/temperatureLabel"
                    android:textSize="65px" />

                <TextView
                    android:id="@+id/temperatureValue"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textSize="65px" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/currentSpeedLabel"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/currentSpeedLabel"
                    android:textSize="65px" />

                <TextView
                    android:id="@+id/currentSpeedValue"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textSize="65px" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>